# platformer

./: Design.md  README.md  benchmark.py  gameview.py  main.py  moving_platform.py  pyproject.toml  readmap.py  text
All_items/: gate.py  interuptor.py
All_monsters/: monsters.py
All_weapons/: weapons.py
Desktop/platformer.py/: .coverage  ANSWERS.md  Design.md  LOG.md  README.md  benchmark.py  gameview.py  main.py  moving_platform.py  pyproject.toml  readmap.py
Desktop/platformer.py/All_items/: gate.py  interuptor.py
Desktop/platformer.py/All_monsters/: monsters.py
Desktop/platformer.py/All_weapons/: weapons.py
Desktop/platformer.py/maps/: map0.txt  map1.txt  map1.yaml  map2.txt  map2.yaml  map3.txt  map3.yaml  map4.txt  map5.txt  map_test.txt  yaml.txt
Desktop/platformer.py/tests/: __init__.py  conftest.py  test_gameview.py  test_gameview_copy.py  test_gameview_levels.py  test_gameview_monsters.py  test_gameview_moving_platform.py  test_gameview_weapons.py  test_readmap.py  test_switchgate.py
administration/: ANSWERS.md  DESIGN.md  LOG.md
maps/: map3.txt  map4.txt
maps/benchmark_maps/: enemies1.txt  enemies10.txt  enemies100.txt  enemies1000.txt  enemies10000.txt  enemies5.txt  enemies50.txt  enemies500.txt  platforms10.txt  platforms1000.txt  platforms50.txt
maps/map_tests/: death.txt  file_test.txt  sword.txt  zone.txt
maps/map_tests/moving_platforms/: block1.txt  block10.txt  block3.txt  block4.txt  block5.txt  block7.txt  block8.txt  (+1 more)
tests/: test_gameview_monsters.py  test_gameview_moving_platform.py  test_switchgate.py  test_zone.py
(+16 files in other folders)
